# producer-consumer

./: .gitignore  README.md
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  aligned_array.hpp  bad_solution.hpp  benchmark.hpp  main.cpp  seqlock_solution.hpp  shared_mutex_solution.hpp  storage.hpp  synchronised_solution.hpp  unsynchronised_solution.hpp  zmq_benchmark.hpp
src/tests/: CMakeLists.txt  test_aligned_array.cpp  test_bad_solution.cpp  test_seqlock_solution.cpp  test_zmq.cpp
visualize/: plot_results.py
visualize/data/: results_dell.json
